# Oviz

./: .gitignore  README.md  README_en.md  README_zh.md  install.sh  interface.py  log_sys.py  main.py  main.spec  pack_for_win.sh  publish.sh  pyproject.toml  requirements.txt  test.py
Config/: color.yml  color_map.json  global_config.json  init_canvas_cfg2d.json  init_canvas_cfg3d.json  layout_config.json  main.ui  menu_bar.json  qviz.ui  status_bar.json
Controller/: back.py  controller.py  core.py
MagicPipe/: pipeline.py
Model/: model.py
MsgManager/: README.md  manager.py  utils.py
MsgManager/demo/: pub_test.py  sub_test.py
MsgManager/msg/: bbox2d.py  bbox3d.py  bboxes2d.py  bboxes3d.py  point.py  pointcloud.py  position.py  size.py
Oviz/: __init__.py  interface.py  main.py
Oviz/Config/: color_map.json  init_canvas_cfg3d.json  insight_cfg.json  layout.ini  layout_config.json  logo.pptx  menu_bar.json  status_bar.json
Oviz/Controller/: controller.py  core.py
Oviz/MagicPipe/: core.py  pipeline.py
Oviz/Model/: model.py
Oviz/MsgManager/: UdpDict.py  manager.py  tcp_middleware.py  udp_middleware.py  ultra_middleware.py  upd_middleware.py
Oviz/PointPuzzle/: .gitignore  points_icp.py  pypcd.py  uos_pcd.py  utils.py
Oviz/Utils/: common_utils.py  point_cloud_utils.py  pypcd.py
Oviz/View/: QxtSpanSlider.py  custom_camera.py  custom_progress.py  custom_widget.py  dock_view.py  lasso.py  lasso2d.py  view.py  viz_core.py
Pack/: install.sh  qviz
Qviz/: __init__.py  interface.py  main.py
Qviz/Controller/: controller.py
Qviz/Model/: model.py
Qviz/MsgManager/: manager.py
Qviz/Utils/: common_utils.py  navi_state.py  point_cloud_utils.py  pypcd.py
Qviz/View/: custom_widget.py  dock_view.py  view.py  viz_core.py
SmartParse/: smart_parse.py
Tools/: bin2pcd.py
Utils/: common_utils.py  point_cloud_utils.py  pypcd.py
View/: back.py  box_marker.py  custom_widget.py  dock_view.py  mov_obj.py  uviz.py  view.py  viz_core.py
