[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = "Qviz"
version = "1.0.2"
authors = [
    { name = 'xiaoqiang cheng', email = 'xiaoqiang.cheng@foxmail.com' }
]
description = 'Qviz: A powerful visualization tool for all your data. See images, point clouds, and more. Your go-to choice for effortless visualization!'
readme = 'README.md'
license = { file = 'LICENSE' }
requires-python = '>=3.8'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: GNU General Public License (GPL)',
    'Operating System :: OS Independent'
]

dependencies = [
        'matplotlib>=3.5.3',
        'numpy>=1.24.1',
        'opencv_python>=4.8.1.78',
        'PySide2>=5.15.2.1',
        'python_lzf>=0.2.4',
        'QDarkStyle>=3.1',
        'scipy>=1.9.0',
        'vispy>=0.13.0'
    ]

[project.scripts]
Qviz = 'Qviz.main:main'

[project.urls]
'Homepage' = 'https://github.com/xiaoqiang-cheng/Qviz'

