[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = "Oviz-Lite"
version = "0.1.5"
authors = [
    { name = 'xiaoqiang cheng', email = 'xiaoqiang.cheng@foxmail.com' }
]
description = 'Oviz: A powerful visualization tool for all your data. See images, point clouds, and more. Your go-to choice for effortless visualization!'
readme = 'README.md'
license = { file = 'LICENSE' }
requires-python = '>=3.8'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: GNU General Public License (GPL)',
    'Operating System :: OS Independent'
]

dependencies = [
        'numpy>=1.20.3',
        'opencv_python>=4.7.0',
        'python_lzf>=0.2.4',
    ]

[project.urls]
'Homepage' = 'https://github.com/xiaoqiang-cheng/Oviz'

